# tc-pipelines

./: .gitignore  .tc-fitness.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  shard_probe.py
.github/: CODEOWNERS  dependabot.yml
.github/selftest-fixture/: tier.tc-fitness.toml
.github/workflows/: auto-merge-on-green.yml  auto-merge.yml  azure-vm-deploy.yml  branch-janitor.yml  ci.yml  dependabot-automerge.yml  docker-build-publish.yml  event-dispatch.yml  example-callers.yml  example-docker-build-publish.yml  example-event-dispatch.yml  example-fitness-engine-canary.yml  example-fresh-install-smoke.yml  example-mutation-gate.yml  example-publish-pypi.yml  example-python-quality-gate.yml  example-release.yml  example-require-work-item.yml  example-security-scan.yml  example-sonar-scan.yml  example-verify-and-close.yml  fitness-engine-canary.yml  independent-verifier.yml  loop-dispatch.yml  loop-implement.yml  meta-quality-gate.yml  mutation-gate.yml  python-quality-gate.yml  require-work-item-gate.yml  require-work-item.yml  security-scan-self.yml  security-scan.yml  self-ci.yml  sonar-new-code-reset.yml  sonar-triage.yml  test-shard-routing.yml  verify-and-close.yml
actions/detect-code-changes/: action.yml  decide-code-changed.sh
actions/license-present/: action.yml
actions/pre-commit-cached/: action.yml
actions/python-gate-body/: action.yml
actions/setup-uv-cached/: action.yml
docs/: COST-OPTIMIZATION.md  IMPLEMENTATION.md  MIGRATION.md  SONAR-MAINTENANCE.md  verifying-images.md
governance/: .gitleaks.toml  AUTONOMOUS-DELIVERY-STANDARD.md  CANONICAL-ORG-RULESET.md  CODEOWNERS  README.md  STANDARDS.md  agent-sdlc-access-and-hitl.md  autonomous-loop.md  gate-hardening.md  gitignore  pre-commit-config.yaml  renovate.json  security-scan.md
governance/decisions/: ADR-LOOP-STATE-MACHINE.md  ADR-POLICY.md  MERGE-QUEUE-D1.md
governance/git-hooks/: commit-msg  (+1 more)
scripts/: README.md  agent-token.py
tools/: README.md  pyproject.toml
tools/sonar/: .gitignore  reset_new_code.py  triage_hotspots.py
tools/sonar/tests/: test_reset_new_code.py  test_triage_hotspots.py
tools/tc_agent_tools/: __init__.py  agent_token.py
(+79 files in other folders)
