[project]
name = "tc-pipelines-selftest-harness"
version = "0.0.0"
description = "Minimal uv project so python-quality-gate.yml can be self-tested against this repo's fixture gate (.github/workflows/test-shard-routing.yml). Not published; the reusable workflows + composite actions are the repo's real product."
requires-python = ">=3.12"
dependencies = [
    "three-cubes-fitness @ git+https://github.com/three-cubes/tc-fitness.git@v0.9.0",
    "coverage>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# No package to build — this is a self-test dependency harness, not a library.
bypass-selection = true
