[project]
name = "tc-pipelines-selftest-harness"
version = "0.0.0"
description = "Minimal uv project so python-quality-gate.yml can be self-tested against this repo's fixture gate (.github/workflows/test-shard-routing.yml). Not published; the reusable workflows + composite actions are the repo's real product."
requires-python = ">=3.12"
dependencies = [
    "three-cubes-fitness @ git+https://github.com/three-cubes/tc-fitness.git@v0.10.0",
    "coverage>=7.0",
]

[tool.uv]
# Deps-only harness: uv installs the dependencies into the venv but does NOT
# build this root as a package (there is nothing to build — the repo's product
# is its workflows + composite actions).
package = false
